# ForestOGram

./: .gitignore  README.md  __init__.py  convert_inputs.sh  requirements.txt  scrape_birds.py  setup.cfg  setup.py
.github/workflows/: python-app.yml
Documentation/: paper.md
forestogram/: __init__.py  audio_moth_preprocessing.py
forestogram/tests/: tests.py
inputs/onset_offset/: XC155387_-_Pink_Pigeon_-_Nesoenas_mayeri.txt
manuscript/: koalas.md  paper.md
mp3/: convert_inputs.sh
onset_offset/: XC155388_-_Pink_Pigeon_-_Nesoenas_mayeri.txt
outputs/python_nbs/: PinkPigeon.py  Untitled.ipynb  ViewKestrel.ipynb  ViewKestrelFeatures.ipynb  ViewSegmentsAutoClass.ipynb  sound_segmentation.py
outputs/python_nbs/.ipynb_checkpoints/: ViewSegments-checkpoint.ipynb
python/: ProcessSegments.py  ViewSegments.ipynb  ViewSegmentsAutoClass.ipynb  dont_scrape_birds.py  process_segments.py
python/tests/: tests.py
tests/: tests.py
