[metadata]
name = SonicForest
version = 0.0
description = Forest Sound Data set.
long_description_content_type = text/markdown
url = http://github.com/russelljjarvis/ForestOGram

author = Russell Jarvis
author_email = russelljarvis@protonmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9.2


[options]
zip_safe = False
packages = find:
python_requires = >=3.5
install_requires =
    pandas==1.1.0
    matplotlib
    seaborn
    quantities==0.12.4
    scikit_learn==0.23.2
